updated server properties, install instructions and began command lexicon